versioned_docs/version-2.4/k3d/partials/github/_install.mdx
import GitHubHandoffScreen from "../../../img/k3d/github/handoff-screen.png";
import CommonRootCredentialsCmd from "../../../common/partials/common/_root-credentials-cmd.mdx";
import CommonTerminalOutput from "../../../common/partials/common/_terminal-output.mdx";

### GitHub

Create or use an actual [GitHub](https://github.com) personal account

### Install the CA (Certificate Authority) of mkcert in your trusted store

We use [mkcert](https://github.com/FiloSottile/mkcert) to generate local certificates and serve `https` with the Traefik Ingress Controller. During the installation, kubefirst generates these certificates and pushes them to Kubernetes as secrets to attach to Ingress resources.

To allow the applications running in your kubefirst platform in addition to your browser to trust the certificates generated by your kubefirst local install, you need to install the CA (Certificate Authority) of mkcert in your trusted store. To do so, follow these simple steps:

```shell
brew install mkcert
mkcert -install
```

This is not an optional step: the cluster creation will fail if you don't install the mkcert CA in your trusted store.

If you are using Firefox, you have one more step: you need to install the [Network Security Services](https://firefox-source-docs.mozilla.org/security/nss/index.html) (NSS):

```shell
brew install nss
```

#### Additional steps for Windows with WSL

The certificate installed on your WSL distribution won't be propagated to the local system (Windows). If you want to access your k3d installation from your main OS without certification warning, you will need to add the certificate to your Windows Trusted Root Certification Authorities store. To do so, find the location of the store by running the following command in WLS:

```shell
mkcert -CAROOT
```

Now `cd` into that directory and run:

```shell
explorer.exe .
```

It will open Explorer in the current directory. Copy the full path, which should look like `\\wsl.localhost\Ubuntu\root\.local\share\mkcert`. Open PowerShell as an administrator, `cd` to the copied path, and run the following command:

```PowerShell
certutil –addstore -enterprise –f "Root" .\rootCA.pem
```

Restart your browser, and you should be good to go.

### Local Atlantis Executions (optional)

To install the k3d kubefirst platform with Atlantis wired up for automated terraform executions, you'll need to create an account with ngrok, and expose an ngrok auth token environment variable in your shell. This allows the github/gitlab servers to invoke the Atlantis webhook running in your cluster.

To sign up for an ngrok account in 1 click, visit
[https://dashboard.ngrok.com/signup](https://dashboard.ngrok.com/signup)

Once you've logged in, you can retrieve your ngrok auth token by visiting
[https://dashboard.ngrok.com/get-started/your-authtoken](https://dashboard.ngrok.com/get-started/your-authtoken)

Make this available by running the following in your shell before you execute your `kubefirst k3d create` command, replacing the xxxxxxxxxxxxxxxxxxxxx with your actual authtoken.

```bash
export NGROK_AUTHTOKEN=xxxxxxxxxxxxxxxxxxxxx
```

If you skip this step the platform will still operate just fine, you just won't have automated terraform plans and applies in your pull requests.

## Working without SSH

If you need your kubefirst installation to avoid using SSH whenever possible, you can bypass SSH and kubefirst will configure itself, GitHub Actions, Argo CD, and your entire GitOps workflow to utilize HTTPS instead of SSH at all times.

Provide the flag `--git-protocol https` when building your k3d cluster and kubefirst will take care of the rest.

If you ever need to change this, you will need to rebuild the cluster or manually update the templates in your `gitops` repository.

## Create your new local cluster

To create a new kubefirst cluster locally, run

```shell
kubefirst k3d create
```

Details about your execution will be logged to your `~/.k1/logs` directory. More information on `kubefirst k3d`, including optional flags, can be discovered by running `kubefirst k3d help`.

We are able to create an ephemeral GitHub token that expires after 8 hours using a process that will prompt your browser to request access to your account. If you need a quick environment, this is a frictionless approach. However, if you need this environment for longer than 8 hours, which is probably the case, please follow our [GitHub Token Guide](../../../common/git-auth.mdx) and export a more permanent token to your terminal by using the following command:

```shell
export GITHUB_TOKEN=ghp_xxxxxxxx
```

<CommonTerminalOutput cloud="k3d"  minutes="7" handoffScreen={GitHubHandoffScreen} />

### Installed Applications

To see what is installed by kubefirst, check the [overview page](../../overview.mdx).

## Console UI Screen

![kubefirst console screen](../../../img/common/github/console.png)

<CommonRootCredentialsCmd cloud="k3d" />

## Connecting to Kubernetes

You will be automatically connected to your new Kubernetes cluster. To view all cluster pods, run

```shell
kubectl get pods -A
```
